
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
unsigned long
fixx(unsigned char *data, unsigned long i)
{
 unsigned long len;

 len = (data[i+3]<<24) +
  (data[i+2]<<16) +
  (data[i+1]<<8) +
  (data[i]);

return len;
}
